# Kandalf

./: Bella_ciao_-_Italian_Anti-fascist_Song-EBw45LD8bMw.m4a.part  EXTREME_USSR_Anthem_Earrape-MJdz3i44dIc.webm.part  README.md  data.py  keep_alive.py  main.py  pyproject.toml  requirements.txt
templates/: templates.html
