[tool.poetry]
name = "kandalf-pro"
version = "0.1.0"
description = ""
authors = ["stonklat <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.5.0"
pytube = "^11.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
